Fix Log Viewer on mobile

--- a/src/Glimmr/wwwroot/css/glimmr.css
+++ b/src/Glimmr/wwwroot/css/glimmr.css
@@ -29,6 +29,19 @@
         margin: 0 auto;
     }
 
+    #logModal .btn {
+        width: 30px;
+        height: 30px;
+    }
+    
+    #logModal .btn > span {
+        position: absolute;
+        left: 0;
+        top: 2px;
+        width: 100%;
+        text-align: center;
+    }
+
     .myNav > .myNav {
         text-align: center;
     }
